change infra moments